[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/NumberPad/Light_Theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/NumberPad/NumberPad.gd" type="Script" id=2]
[ext_resource path="res://Assets/GFX/Interface/PNG/metalPanel.png" type="Texture" id=3]
[ext_resource path="res://Assets/GFX/Interface/PNG/glassPanel.png" type="Texture" id=4]
[ext_resource path="res://UI/NumberPad/NumberPadButton.gd" type="Script" id=5]
[ext_resource path="res://Assets/GFX/Interface/PNG/dotRed.png" type="Texture" id=6]
[ext_resource path="res://Assets/GFX/Interface/PNG/glassPanel_projection.png" type="Texture" id=7]

[node name="NumberPad" type="Popup"]
visible = true
rect_min_size = Vector2( 300, 400 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="VSplitContainer" type="VSplitContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
dragger_visibility = 2

[node name="DisplayContainer" type="CenterContainer" parent="VSplitContainer"]
editor/display_folded = true
margin_right = 280.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="DisplayGlass" type="NinePatchRect" parent="VSplitContainer/DisplayContainer"]
margin_left = 15.0
margin_top = 20.0
margin_right = 265.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 60 )
texture = ExtResource( 4 )

[node name="Display" type="RichTextLabel" parent="VSplitContainer/DisplayContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 250.0
margin_bottom = 70.0
rect_min_size = Vector2( 220, 40 )
bbcode_enabled = true
bbcode_text = "[center] TEST [/center]"
text = " TEST "

[node name="ButtonContainer" type="CenterContainer" parent="VSplitContainer"]
editor/display_folded = true
margin_top = 100.0
margin_right = 280.0
margin_bottom = 380.0

[node name="GridContainer" type="GridContainer" parent="VSplitContainer/ButtonContainer"]
margin_left = 65.0
margin_top = 37.0
margin_right = 215.0
margin_bottom = 242.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 3

[node name="Button1" type="Button" parent="VSplitContainer/ButtonContainer/GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "1"
script = ExtResource( 5 )

[node name="Button2" type="Button" parent="VSplitContainer/ButtonContainer/GridContainer"]
margin_left = 55.0
margin_right = 95.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "2"
script = ExtResource( 5 )

[node name="Button3" type="Button" parent="VSplitContainer/ButtonContainer/GridContainer"]
margin_left = 110.0
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "3"
script = ExtResource( 5 )

[node name="Button4" type="Button" parent="VSplitContainer/ButtonContainer/GridContainer"]
margin_top = 55.0
margin_right = 40.0
margin_bottom = 95.0
rect_min_size = Vector2( 40, 40 )
text = "4"
script = ExtResource( 5 )

[node name="Button5" type="Button" parent="VSplitContainer/ButtonContainer/GridContainer"]
margin_left = 55.0
margin_top = 55.0
margin_right = 95.0
margin_bottom = 95.0
rect_min_size = Vector2( 40, 40 )
text = "5"
script = ExtResource( 5 )

[node name="Button6" type="Button" parent="VSplitContainer/ButtonContainer/GridContainer"]
margin_left = 110.0
margin_top = 55.0
margin_right = 150.0
margin_bottom = 95.0
rect_min_size = Vector2( 40, 40 )
text = "6"
script = ExtResource( 5 )

[node name="Button7" type="Button" parent="VSplitContainer/ButtonContainer/GridContainer"]
margin_top = 110.0
margin_right = 40.0
margin_bottom = 150.0
rect_min_size = Vector2( 40, 40 )
text = "7"
script = ExtResource( 5 )

[node name="Button8" type="Button" parent="VSplitContainer/ButtonContainer/GridContainer"]
margin_left = 55.0
margin_top = 110.0
margin_right = 95.0
margin_bottom = 150.0
rect_min_size = Vector2( 40, 40 )
text = "8"
script = ExtResource( 5 )

[node name="Button9" type="Button" parent="VSplitContainer/ButtonContainer/GridContainer"]
margin_left = 110.0
margin_top = 110.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 40, 40 )
text = "9"
script = ExtResource( 5 )

[node name="Status" type="TextureRect" parent="VSplitContainer/ButtonContainer/GridContainer"]
margin_top = 165.0
margin_right = 40.0
margin_bottom = 205.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 6 )
expand = true

[node name="Button0" type="Button" parent="VSplitContainer/ButtonContainer/GridContainer"]
margin_left = 55.0
margin_top = 165.0
margin_right = 95.0
margin_bottom = 205.0
rect_min_size = Vector2( 40, 40 )
text = "0"
script = ExtResource( 5 )

[node name="ButtonOK" type="Button" parent="VSplitContainer/ButtonContainer/GridContainer"]
margin_left = 110.0
margin_top = 165.0
margin_right = 150.0
margin_bottom = 205.0
rect_min_size = Vector2( 40, 40 )
text = "OK"
script = ExtResource( 5 )

[node name="CorrectGuessLabel" type="Label" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_top = 100.0
margin_right = 110.0
margin_bottom = 135.0
rect_min_size = Vector2( 220, 30 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="CorrectGuessLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="CorrectGuessTimer" type="Timer" parent="."]
one_shot = true

[node name="CheckTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="CorrectGuessTimer" to="." method="_on_CorrectGuessTimer_timeout"]
[connection signal="timeout" from="CheckTimer" to="." method="_on_CheckTimer_timeout"]
